DSTEW-499 address review comments